--- a/home.css
+++ b/home.css
@@ -9,22 +9,28 @@ body {
 
 /* Header Styles */
 .header {
-    background-color: #005f73; /* Dark blue */
+    background-color: #a8664b;
     color: white;
     text-align: center;
     padding: 2em;
     margin-bottom: 20px;
 }
 
-.header h1 {
-    font-size: 2.5rem;
-    margin-bottom: 0.5em;
-}
+h1 {
+    font-family: 'Helvetica', sans-serif;
+    font-size: 4rem;
+    color: #fff; /* Color de texto blanco */
+    text-align: center;
+    background: linear-gradient(45deg, #ff6f61, #ff9a8b); /* Degradado en colores cálidos */
+    -webkit-background-clip: text; /* Aplica el fondo al texto */
+    color: transparent; /* Hace que el texto sea transparente para mostrar el fondo */
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Sombra suave */
+    margin-top: 10px;
+    padding: 10px;
+  }
 
-.header p {
-    font-size: 1.2rem;
-}
-
+  
+  
 /* FAQ Content Styles */
 .main-content {
     max-width: 800px;
@@ -76,7 +82,8 @@ body {
 .faq-question {
     font-size: 1.3rem;
     margin-bottom: 5px;
-    color: #005f73; /* Dark blue */
+    color: #a8664b;
+    font-weight: bold;
 }
 
 .faq-answer {
@@ -90,30 +97,37 @@ body {
     display: block;
     margin-top: 10px;
 }
-
-/* Go Back Button */
+.buttons-container {
+    display: flex;
+    justify-content: center; /* Centra los botones */
+    margin-top: 20px;
+}
 .go-back-container {
-    text-align: center;
+    display: flex;
+    justify-content: center; /* Centra los botones */
+    gap: 15px; /* Espacio entre botones */
     margin-top: 20px;
 }
 
-.back-btn {
+.back-btn, .contact-btn {
     padding: 10px 20px;
-    background-color: #00aaff; /* Medium blue */
+    background-color: #a8664b;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 16px;
 }
 
-.back-btn:hover {
-    background-color: #0088cc; /* Darker blue */
+.back-btn:hover, .contact-btn:hover {
+    background-color: #8a5238;
 }
+
 
 /* Footer Styles */
 .footer {
-    background-color: #005f73; /* Dark blue */
+    background-color: #a8664b;
     color: white;
     text-align: center;
     padding: 20px;
