--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background: linear-gradient(135deg, #ff7eb3, #ff758c, #ff7eb3);
     background-size: 300% 300%;
     animation: backgroundMove 8s infinite alternate;
-    background-image: url('beautiful img.png'); /* Nombre de tu imagen */
+    background-image: url('butterfly.jpg'); /* Nombre de tu imagen */
     background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -59,7 +59,7 @@ h1 {
     font-size: 1.2em;
     font-weight: bold;
     color: white;
-    background: #da5090;
+    background: #a8664b;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -68,5 +68,5 @@ h1 {
 
 /* Efecto Hover */
 .btn:hover {
-    background: #df5ba4;
+    background: #8b5038;;
 }
