--- a/home.css
+++ b/home.css
@@ -62,6 +62,14 @@ h1 {
     margin-right: 8px;
     color: #005f73; /* Azul oscuro */
 }
+/* para writing style*/
+.highlight {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #4CAF50;
+    font-style: italic;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Sombra */
+}
 
 
 .faq-item {
