--- a/contact.css
+++ b/contact.css
@@ -29,16 +29,23 @@ header {
   align-items: center;
 }
 
-header h1 {
-  color: #fff;
-  margin: 0;
-}
 
+h1 {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 3rem;
+  background: linear-gradient(45deg, #ff6f61, #ff9a8b);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  display: inline-block;
+}
 header p {
   color: #fff;
   margin: 10px 0;
+  position: relative;
+  bottom: 2rem;
 }
-
 /* Estilos para el contenido principal */
 main {
   display: flex;
@@ -53,6 +60,9 @@ main {
   width: 45%;
   padding: 20px;
   border-radius: 8px;
+  position: relative;
+  left: 25rem;
+  bottom: 2rem;
 }
 
 .contact-info h2 {
@@ -70,10 +80,11 @@ main {
 
 /* Estilo del formulario */
 .contact-form {
-  width: 45%;
+  width: 35%;
   display: flex;
   flex-direction: column;
-  gap: 15px; /* Espacio entre los elementos del formulario */
+  position: relative;
+  right: 12rem;
 }
 
 .contact-form label {
@@ -101,6 +112,7 @@ main {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 30%;
 }
 
 .contact-form button:hover {
@@ -146,4 +158,54 @@ footer {
 footer p {
   font-size: 1rem;
   margin: 0;
+}
+
+/* Media Query para tablets (pantallas menores a 1024px) */
+@media screen and (max-width: 1024px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-info, .contact-form {
+    width: 90%;
+    left: 0;
+    right: 0;
+  }
+}
+
+/* Media Query para móviles (pantallas menores a 768px) */
+@media screen and (max-width: 768px) {
+  header {
+    height: auto;
+    padding: 20px;
+  }
+
+  main {
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  .contact-info, .contact-form {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .contact-form input, .contact-form textarea {
+    font-size: 14px;
+  }
+
+  .go-back-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .back-btn {
+    width: 30%;
+  }
+
+  footer {
+    padding: 10px;
+    font-size: 0.9rem;
+  }
 }
