cambia index.htnml style.css home.html home.css

--- a/home.css
+++ b/home.css
@@ -116,8 +116,11 @@ h1 {
     margin: 0;
     color: #555;
     display: none; /* Initially hidden */
+    font-style: italic;
+
 }
 
+  
 .faq-answer.active {
     display: block;
     margin-top: 10px;
