--- a/home.css
+++ b/home.css
@@ -29,6 +29,7 @@ body {
     margin-bottom: 20px;
 }
 
+  
 .title-container {
     text-align: center;
 }
@@ -42,6 +43,18 @@ h1 {
     color: transparent;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     display: inline-block;
+    animation: zoomIn 1s ease-out;
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
   
