--- a/contact.css
+++ b/contact.css
@@ -159,8 +159,8 @@ footer p {
   font-size: 1rem;
   margin: 0;
 }
-
-@media screen and (max-width: 1024px) {
+/* para tablet*/
+@media screen and (max-width:835px) {
   main {
     flex-direction: column; /* Cambia el diseño a columna */
     align-items: center; /* Centra los elementos */
@@ -175,10 +175,19 @@ footer p {
   .contact-form button {
     position: relative;
     left: 17rem;
-    width: 20%;
+    width: 30%;
+  }
+
+  .go-back-container {
+    flex-direction: column; /* Apila los botones */
+    align-items: center; /* Centra los botones */
+    position: relative;
+    left: 17rem;
+    width: 40%;
+    bottom: 2rem;
   }
 }
-
+/* para moviles*/
 @media screen and (max-width: 768px) {
   header {
     height: auto; /* Ajusta la altura automáticamente */
@@ -207,10 +216,10 @@ footer p {
   .go-back-container {
     flex-direction: column; /* Apila los botones */
     align-items: center; /* Centra los botones */
-  }
-
-  .back-btn {
-    width: 50%; /* Ajusta el tamaño del botón */
+    position: relative;
+    left: 4rem;
+    width: 60%;
+    bottom: 1rem;
   }
 
   footer {
